tests/NormalTests/paczka1/fuzzy1/75356368.err
Error in line 20: iJYO1QH A145 68,3
Error in line 21: iJYO1QH S939 49,7
Error in line 25: 6npzHnogEJ S564 27,1
